--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -2,35 +2,70 @@
 @tailwind components;
 @tailwind utilities;
 
+.styleLogo {
+  @apply border p-2 bg-gradient-to-br from-green-500 via-green-300 to-green-500 hover:from-green-300 hover:via-green-500 hover:to-green-300 fill-green-700 rounded-xl size-12
+}
+
+.styleForm {
+  @apply border grid grid-rows-3 gap-2
+}
+
+.styleInputContainer {
+  @apply border w-full text-left space-y-2
+}
+.styleCheckBoxContainer {
+  @apply border w-full space-x-2 flex 
+}
+
+.styleLabel {
+  @apply border capitalize font-semibold
+}
+.styleInput {
+  @apply border p-2 w-full rounded-lg focus:outline-none focus:ring-2 focus:ring-green-600
+}
+
+
+
+
+
+
+
+.clearButtonHover {
+  @apply bg-transparent border border-emerald-600 text-emerald-600 hover:bg-emerald-600 hover:text-white font-bold py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-emerald-600;
+}
+
+.styleButton {
+  @apply w-full bg-emerald-600 hover:bg-emerald-700 text-white font-bold py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-emerald-600;
+}
 .buttonShape {
-  @apply font-bold capitalize w-full py-2 px-4 rounded-md;
-}
-.clearButtonStyle {
-  @apply border  border-black bg-white text-black  ;
-}
-.clearButtonStyle.hover {
-  @apply hover:bg-black hover:border-black hover:text-white;
-}
-.darkButtonStyle {
-  @apply border-white bg-black text-white ;
-}
-.darkButtonStyle.hover {
-  @apply  hover:bg-white hover:text-black hover:border-black py-2 px-4;
+  @apply transition-all duration-300;
 }
 
-.darkButtonStyle.green {
-  @apply border-green-50 bg-green-600 text-green-50 ;
+.styleLink {
+  @apply text-emerald-600 hover:underline;
 }
 
-/* .styleInput {
-  @apply flex justify-start items-center p-2 gap-2 bg-green-50 rounded-md w-full mb-2;
+.asd21 {
+  @apply w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-emerald-600;
 }
-label.styleInput {
-  @apply  text-green-600 w-auto;
+
+/* Estilos para o modo escuro */
+.clearButtonHover.dark {
+  @apply bg-transparent border border-emerald-400 text-emerald-400 hover:bg-emerald-400 hover:text-white; /* Altera cores no modo escuro */
 }
-input.styleInput {
-  @apply text-black outline-none 
+
+.styleButton.dark {
+  @apply bg-emerald-500 hover:bg-emerald-600 text-white; /* Ajuste para o modo escuro */
 }
-input::placeholder  {
-  @apply text-green-400 
-} */
+
+.styleButton.dark {
+  @apply bg-emerald-500 hover:bg-emerald-600; /* Ajuste para o modo escuro */
+}
+
+.styleLink.dark {
+  @apply text-emerald-400; /* Ajuste para o modo escuro */
+}
+
+.asd23 {
+  @apply border-gray-600 focus:ring-emerald-400; /* Ajuste para o modo escuro */
+}
