--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -5,6 +5,9 @@
 .styleLogo {
   @apply p-2 bg-gradient-to-br from-lime-500 via-green-500 to-emerald-500 hover:from-orange-500 hover:via-amber-500 hover:to-yellow-500 fill-gray-900 rounded-lg size-10;
 }
+.styleLoading {
+  @apply animate-spin;
+}
 .styleForm {
   @apply flex flex-col gap-2;
 }
@@ -24,7 +27,7 @@
   @apply accent-green-400;
 }
 .styleInput {
-  @apply border p-2 w-full rounded-lg focus:outline-none focus:ring-2 focus:ring-green-400 ;
+  @apply border p-2 w-full rounded-lg focus:outline-none focus:ring-2 focus:ring-green-400;
 }
 .styleButton {
   @apply border border-gray-700 py-2 px-4 rounded-lg w-full capitalize font-semibold flex gap-2 justify-center items-center;
